@@ -162,11 +162,13 @@ void ScriptInterpreter::mark()
   }
 }
 
-void ScriptInterpreter::updateDOMNodeDocument(NodeImpl *node, DOM::DocumentImpl *oldDoc, DOM::DocumentImpl *newDoc)
+void ScriptInterpreter::updateDOMNodeDocument(DOM::NodeImpl *node, DOM::DocumentImpl *oldDoc, DOM::DocumentImpl *newDoc)
 {
   DOMNode *cachedObject = getDOMNodeForDocument(oldDoc, node);
-  if (cachedObject)
-      putDOMNodeForDocument(newDoc, node, cachedObject);
+  if (cachedObject) {
+    putDOMNodeForDocument(newDoc, node, cachedObject);
+    forgetDOMNodeForDocument(oldDoc, node);
+  }
 }
 
 bool ScriptInterpreter::wasRunByUserGesture() const
